# microclaw

./: .gitignore  DEPENDENCIES.md  README.md  TODOs.md  app.py  clean.sh  cli.py  config.example.json  config.py  config_example.json  gateway.py  gui.py  install.bat  install.sh  pyproject.toml  requirements.txt  run_gateway.py  skill_trigger.txt  start.bat  start.sh  test.ipynb  tui.py  tutorial.ipynb  vision_tool.py
agent/: database_analysis.py  database_analysis_queries.json  数据库分析项目_tasks.json
agent/memory/: 2026-03-09.md  MEMORY.md
agent/sessions/: session_10295dad.json  session_1086781a.json  session_1933b262.json  session_1a5eaaa4.json  session_3e310116.json  session_3e55c41d.json  session_46448a2b.json  session_465fa3eb.json  session_4835b81c.json  session_5028e1ae.json  session_5465b869.json  session_5697b82b.json  session_56c14d0f.json  session_63709f1d.json  session_6b773365.json  session_6d5764e3.json  session_8540b793.json  session_85d08e6a.json  session_a9cf8f14.json  session_b2f88233.json  session_c21cc1c9.json  session_c37136bc.json  (+6 more)
api/: chat.py
graph/: __init__.py  agent.py  memory_indexer.py  model.py  prompt_builder.py  session_manager.py
mcps/: __init__.py
microclaw/: __init__.py  cli.py  client.py  config.py  gateway.py  gui.py  tui.py
tools/: __init__.py  ask_user_question_tool.py  fetch_url_tool.py  grep_tool.py  python_repl_tool.py  read_file_tool.py  registry.py  rm_tool.py  sed_all_tool.py  sed_first_tool.py  skills_scanner.py  sql_tools.py  tavily_search_tool.py  terminal_tool.py  vision_tool.py  write_tool.py
(+21 files in other folders)
