[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "microclaw"
version = "0.1.0"
description = "gateway + TUI + GUI"
readme = "README.md"
requires-python = ">=3.12"

[project.scripts]
microclaw = "cli:main"

[tool.setuptools]
py-modules = ["cli"]
